--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,13 +18,9 @@ website:
       - text: "Proyectos"
         menu:
           - text: "Visualización y Automatización en Lacor"
-            file: projects/lacordual/index.qmd
-          - text: "Proyectos de Big Data"
+            file: DocumentacionConsumos/index.html)
+          - text: "Extracción de datos de Consumos WebScraping en Lacor"
             file: projects/bigdata/index.qmd
-          - text: "Modelado 3D y Visual"
-            file: projects/3D/index.qmd
-      - text: "Sobre mí"
-        file: about.qmd
       - text: "Habilidades"
         file: skills.qmd
     right:
